* The functions `iris.plot.plot` and `iris.quickplot.plot` now take up to two
  arguments, which may be cubes or coordinates, allowing the user to have full
  control over what is plotted on each axis. The coords keyword argument is now
  deprecated for these functions.
* `iris.analysis.SUM` is now a weighted aggregator, allowing it to take a
  weights keyword argument.

Bugs fixed
----------
* N/A

Incompatible changes
--------------------
* N/A

Deprecations
------------
* The coords keyword argument for `iris.plot.plot` and `iris.quickplot.plot`
  has been deprecated due to the new API which accepts multiple cubes or
  coordinates.


----------------------------


Release 1.4 (unreleased)
========================


Features added
--------------
* A new configuration variable called `iris.config.TEST_DATA_DIR`
  has been added, replacing the previous combination of
  `iris.config.MASTER_DATA_REPOSITORY` and
  `iris.config.DATA_REPOSITORY`. This constant should be the path
  to a directory containing the test data required by the unit tests. It can
  be set by adding a ``test_data_dir`` entry to the ``Resources`` section of
  site.cfg. See `iris.config` for more details.
* One and two dimensional cubes can be converted to and from Pandas objects.
  See `iris.pandas` for more details.
* Experimental support has been added to `iris.load`,
  `iris.load_cube` and `iris.load_cubes` for loading Cubes from
  OPeNDAP URLs.
* `iris.experimental.raster.export_geotiff` now provides experimental
  GeoTiff export functionality.
* Cubes with no vertical coordinate can now be output to Grib format. In these
  cases, "Type of first fixed surface" is set to 1, "ground or water surface".
  ( This is a common usage for data with no defined level, but may not be
  strictly correct - see https://github.com/SciTools/iris/issues/519 ).

Bugs fixed
----------
* N/A

Incompatible changes
--------------------
* As part of simplifying the mechanism for accessing test data