@@ -12,6 +12,7 @@ Features added
   deprecated for these functions.
 * `iris.analysis.SUM` is now a weighted aggregator, allowing it to take a
   weights keyword argument.
+* Grib2 translations added for standard_name 'soil_temperature'.
 
 Bugs fixed
 ----------
